	-Implemented and tested LICH special, seems to work well
	-Implemented and tested JESTER special, seems to work well
	-Implemented and tested GIFT special, seems to work well
		-Needs to set a fire effect?
	-Fixed bug in LDecimalToBinary that caused high values to be calculated incorrectly
	-Fixed bug in LCheckSpellShield that caused spells to never be blocked by shields...

KNOWN BUGS:
	-Avatars don't clear status when healed exiting battle

TODO:
	Shortlist:
	-Implement all enemy special abilities
		-OOZE
		-ARMOR (revive sword and shield, otherwise cast SHARP?)
		-HORROR (attack, attack + sleep, attack + blight, attack + mp sap?)
		-Add messages to support these abilities...
	-Connect visual and sound effects
	-Sleep chance is not affected by Legendary resistance if attempted during CHAOS
	-Healing spells probably need higher magic power scalings to account for scaling difference between magic and HP
	-Enemies can GUARD themselves
		-Could consider making target enemies AI pattern exclude the user

	Longlist:
	-Better input handling technique
	-Being guarded reduces blight damage, fix?
	-Sharp increases attack power of unconscious party members
	-Maybe need to buff blight to 1/4 max HP per round
	-Running should be slightly random anyway?

	Additional sounds to consider:
		-Footsteps
		-Monster roar near exit
		-Enter battle sound
		-Level up jingle
		-Battle victory jingle
		-Game victory jingle
		-Game over jingle
		-Going down stairs sound?

	DOESN'T REQUIRE LOGIC:
		-More text/messaging work
		-Improve font
		-Improve in-maze campfire graphics to look less squished when they appear
		-Create all enemy graphics
		-Tune all enemy AI tables
		-Tune all enemy stats
			-Attack, magic, speed, HP, experience
		-Pick all enemy resistances
		-Tune all enemy colors
		-Tune all encounter tables
		-Tune spell mana costs
		-Tune maze exit tables
		-Tune encounter rate
		-Tune all visual effects
		-Create all sound effects