@@ -714,6 +714,9 @@
 		-Needs to set a fire effect?
 	-Fixed bug in LDecimalToBinary that caused high values to be calculated incorrectly
 	-Fixed bug in LCheckSpellShield that caused spells to never be blocked by shields...
+11/3/23
+	-Seeimngly functional SLIME and OOZE specials, just needed to move the OOZE id to be before the HORROR.
+		-Need to do some more thorough analysis in order to verify that this is more space efficient...
 
 KNOWN BUGS:
 	-Avatars don't clear status when healed exiting battle
@@ -721,7 +724,6 @@ KNOWN BUGS:
 TODO:
 	Shortlist:
 	-Implement all enemy special abilities
-		-OOZE
 		-ARMOR (revive sword and shield, otherwise cast SHARP?)
 		-HORROR (attack, attack + sleep, attack + blight, attack + mp sap?)
 		-Add messages to support these abilities...
